[package]
name = "ternary-version"
version = "0.1.0"
edition = "2021"
description = "Version vectors with ternary comparison for distributed GPU state. {+1=newer, 0=concurrent, -1=older}. Conflict detection, merge, dominance."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-version"
documentation = "https://docs.rs/ternary-version"
